# pynbody

./: .buildinfo  .gitignore  .hgignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CODE_OF_CONDUCT.md  Dockerfile  MANIFEST  MANIFEST.in  README.md  THIS_IS_NOT_THE_REPOSITORY_YOU_ARE_LOOKING_FOR  acknowledge.html  analysis.html  backup  bibliography.html  changes  compose.yaml  convenience.html  derived.html  essentials.html  files.txt  genindex.html  index.html  installation.html  loaders.html  objects.inv  pitfalls.html  plot.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug-or-inaccuracy-report.md
.github/workflows/: build-test.yaml  fetch-tables.yaml  fetch-testdata.yaml  pypi.yaml  python315-experimental.yaml
_modules/: index.html
_modules/pynbody/: array.html  bridge.html  derived.html  family.html  filt.html  halo.html  ramses.html  simdict.html  snapshot.html  sph.html  tipsy.html  units.html  util.html
_sources/: analysis.txt  convenience.txt  derived.txt  index.txt  installation.rst.txt  loaders.txt  pitfalls.txt
_sources/reference/: convenience.rst.txt
_sources/tutorials/: bridge.rst.txt  configuration.txt  data_access.rst.txt  data_access.txt  halos.txt  performance.txt  pictures.rst.txt  processing.txt  profile.txt  snapshot_manipulation.txt  tutorials.rst.txt  tutorials.txt
_static/: alabaster.css  basic.css  bootstrap-sphinx.css  doctools.js  jquery.js  nature.css  searchtools.js  websupport.js
docs/: Makefile  acknowledge.rst  analysis.rst  bibliography.rst  conf.py  conf.py~  convenience.rst  derived.rst  docs_update.sh  essentials.rst  index.rst  index.rst~  installation.rst  loaders.rst  make.bat  pitfalls.rst  plot.rst  pynbody.rst  testdata
docs/_static/: alabaster.css  make_folder
docs/_templates/: fulltoc.html  layout.html
docs/reference/: convenience.rst  derived.rst  essentials.rst  index.rst  plot.rst
docs/sphinxext/: apigen.py  docscrape.py  docscrape_sphinx.py  inheritance_diagram.py  ipython_console_highlighting.py  ipython_directive.py  numpydoc.py
docs/tutorials/: bridge.rst  bridge.rst~  changes_v2.rst  configuration.rst  data_access.rst  derived.rst  filters.rst  halos.rst  hmf.rst  parallelism.rst  performance.rst  pictures.rst  processing.rst  profile.rst  quickstart.rst  rotation_curve.rst  snapshot_manipulation.rst  threads.rst  tutorials.rst
examples/: doall.py  plotmf.py  pynbody_demo.ipynb  vdisp.py
examples/notebooks/: README.markdown  README.markdown~  README.md  pynbody_demo-ramses.ipynb  pynbody_demo.ipynb
nose/: .subl782.tmp  adaptahop_test.py  ahf_halos_test.py  arepohdf_test.py  array_test.py  bridge_test.py  cosmology_test.py  derived_arrays.py  family_test.py  filter_test.py  gadget_test.py  gadgethdf_test.py  grafic_test.py  gravity_test.py  halotools_test.py  import_test.py  nchilada_test.py  partial_tipsy_test.py  pyread_gadget_hdf5.py  ramses_new_ptcl_format_test.py  ramses_test.py  smooth_test.py  snapshot.py  snapshot_test.py  sph_image_test.py  sph_smooth_test.py  sph_test.py  subarray_test.py  subfindhdf_gadget4_test.py  test_div_curl.npz  test_hmf.py  test_im_2d.npy  test_im_3d.npy  test_im_grid.npy  test_profile.py  test_rho.npy  test_rho_periodic.npy  test_smooth.npy  test_smooth_periodic.npy  test_stars_2d.npy  (+7 more)
pynbody/: #sph.py#  __init__.py  _util.c  _util.pyx  analysis.py  array.py  backcompat.py  bridge.py  chunk.py  configuration.py  decorate.py  default_config.ini  dependencytracker.py  derived.py  family.py  filt.py  fourier_decomp.py  gadget.py  gadgethdf.py  genic.py  grafic.py  halo.py  iter_subclasses.py  kd.c  kd.h  kdmain.c  kdtree.py  nchilada.py  profile.py  ramses.py  setup.py  simdict.py  smooth.c  smooth.h  snapshot.py  sph.py  sph_image.c  sph_image.cl  sph_to_grid.c  tipsy.py  (+4 more)
pynbody.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pynbody/analysis/: CAMB_Planck18  CAMB_WMAP7  __init__.py  _com.c  _com.pyx  _cosmology_time.pyx  _interpolate3d.c  _interpolate3d.pyx  angmom.py  cambtemplate.ini  cmdlum.npz  com.c  cosmo.py  cosmology.py  decomp.py  default_ssp.txt  fortranfile.py  fourier_decomp.py  gravity.py  h1.hdf5  halo.py  hifrac.py  hmf.py  interpolate.c  interpolate.py  interpolate3d.c  ionfrac.py  (+12 more)
reference/: analysis.html  convenience.html  derived.html  essentials.html  index.html  plot.html
scripts/: doall.py
tests/: adaptahop_test.py  ahf_halos_test.py  array_test.py  bridge_test.py  completion_test.py  conftest.py  copy_on_access_test.py  cosmology_test.py  dataset_view_test.py  decomp_test.py  derived_arrays_test.py  family_test.py  filter_test.py  firehdf_test.py  gadget_test.py  gadgethdf_test.py  gizmo_test.py  grafic_test.py  gravity_test.py  halos_test.py  halotools_test.py  hbtplus_test.py  healpix_test.py  hmf_test.py  hop_test.py  import_test.py  ionfrac_test.py  kdtree_test.py  luminosity_test.py  morphology_test.py  nchilada_test.py  partial_tipsy_test.py  performance_kdtree.py  pkdgravhdf_test.py  plot_hist2d_test.py  plot_stars_test.py  profile_test.py  pyread_gadget_hdf5.py  ramses_new_ptcl_format_test.py  ramses_test.py  (+37 more)
tutorials/: bridge.html  configuration.html  data_access.html  filters.html  halos.html  hmf.html  performance.html  pictures.html  processing.html  profile.html  rotation_curve.html  snapshot_manipulation.html  threads.html  tutorials.html
(+200 files in other folders)
