[build-system]
requires = ["setuptools", "wheel", "oldest-supported-numpy", "cython"]

[tool.pytest.ini_options]
testpaths = ['tests']
filterwarnings = [
    "error",
    # Ignore Warnings thrown by RAMSES when namelist cannot be read
    'ignore:No header file found -- no particle block information available:UserWarning',
    'ignore:No namelist file found\.:UserWarning',
    'ignore:Namelist file either not found or unable to read.*assuming flat LCDM:UserWarning',
    'ignore:Conjoining derived and non-derived arrays.*:RuntimeWarning',
]

[tool.isort]
profile = "black"
combine_as_imports = true
known_third_party = [
  "IPython",
  "numpy",
  "matplotlib",
  "pytest",
]
known_first_party = [
  "pynbody",
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
