[build-system]
requires = ["setuptools", "wheel", "oldest-supported-numpy", "cython"]

[tool.pytest.ini_options]
testpaths = ['tests']
filterwarnings = [
    "error",
    # Ignore Warnings thrown by RAMSES when namelist cannot be read
    'ignore:No header file found -- no particle block information available:UserWarning',
    'ignore:No namelist file found\.:UserWarning',
    'ignore:Namelist found but unable to read\.:UserWarning',
    'ignore:Namelist file either not found or unable to read.*assuming flat LCDM:UserWarning',
    'ignore:More hydro variables.*:RuntimeWarning',
    # ignore other common farily harmless scenarios:
    'ignore:Conjoining derived and non-derived arrays.*:RuntimeWarning',
    'ignore:invalid value encountered in multiply:RuntimeWarning',
    # ignore deprecation warnings triggered by h5py with python 3.12
    'ignore:datetime.datetime.utcfromtimestamp\(\) is deprecated:DeprecationWarning',
  ]

[tool.isort]
profile = "black"
combine_as_imports = true
known_third_party = [
  "IPython",
  "numpy",
  "matplotlib",
  "pytest",
]
known_first_party = [
  "pynbody",
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
