[build-system]
requires = ["setuptools", "wheel", "numpy>=2.0.0", "cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pynbody"
authors = [
    {name = "The pynbody team", email = "pynbody-users@googlegroups.com"}
]
description = "Astronomical N-body/SPH analysis for python"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
    "h5py>=3.8.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "osfclient",
    "hdfstream>=0.0.21",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/pynbody/pynbody/releases"

[project.optional-dependencies]
tests = [
    "pytest",
    "pandas",
    "camb",
    "IPython",
    "healpy; platform_system != 'Windows' and python_version < '3.14'"
]
docs = [
    "ipython>=3",
    "Sphinx>=7,<8.2.0",
    "sphinx-book-theme",
    "sphinx-copybutton",
    "numpydoc", 
    "nbsphinx",
    "camb",
    "healpy"
]

[tool.setuptools]
packages = [
    "pynbody",
    "pynbody.analysis",
    "pynbody.array",
    "pynbody.plot",
    "pynbody.gravity",
    "pynbody.chunk",
    "pynbody.filt",
    "pynbody.sph",
    "pynbody.snapshot",
    "pynbody.bridge",
    "pynbody.halo",
    "pynbody.halo.details",
    "pynbody.extern",
    "pynbody.kdtree",
    "pynbody.test_utils",
    "pynbody.util",
    "pynbody.array.shared",
    'pynbody.openmp'
]

[tool.setuptools.package-data]
pynbody = ["default_config.ini"]
"pynbody.analysis" = [
    "cmdlum.npz",
    "default_ssp.txt",
    "lsst_ssp.txt",
    "h1.hdf5",
    "ionfracs.npz",
    "CAMB_WMAP7",
    "CAMB_Planck18",
    "cambtemplate.ini"
]
"pynbody.plot" = ["tollerud2008mw"]

[tool.setuptools.dynamic]
version = {attr = "pynbody.__version__"}

[tool.pytest.ini_options]
testpaths = ['tests']
filterwarnings = [
    "error",
    # Ignore Warnings thrown by RAMSES when namelist cannot be read
    'ignore:No header file found -- no particle block information available:UserWarning',
    'ignore:No namelist file found\.:UserWarning',
    'ignore:Namelist found but unable to read\.:UserWarning',
    'ignore:Namelist file either not found or unable to read.*assuming flat LCDM:UserWarning',
    'ignore:More hydro variables.*:RuntimeWarning',
    # ignore other common farily harmless scenarios:
    'ignore:Conjoining derived and non-derived arrays.*:RuntimeWarning',
    'ignore:invalid value encountered in multiply:RuntimeWarning',
    # ignore deprecation warnings triggered by h5py with python 3.12
    'ignore:datetime.datetime.utcfromtimestamp\(\) is deprecated:DeprecationWarning',
    # ignore integration warnings which come up
    'ignore:The occurrence of roundoff error:UserWarning'
  ]

[tool.isort]
profile = "black"
combine_as_imports = true
known_third_party = [
  "IPython",
  "numpy",
  "matplotlib",
  "pytest",
]
known_first_party = [
  "pynbody",
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
